Added MilvusDS to citations endpoint

--- a/backend/src/semantic_search/dev/embeddings.ipynb
+++ b/backend/src/semantic_search/dev/embeddings.ipynb
@@ -19,17 +19,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/luis/opt/anaconda3/envs/py310-arm64/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    },
+     "data": {
+      "text/plain": [
+       "<module 'semantic_search.store.milvus_store' from '/Users/luis/Desktop/ETH/Courses/SS25-DSL/dsl-research-assistant/backend/src/semantic_search/store/milvus_store.py'>"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from importlib import reload\n",
+    "from src.semantic_search.store import milvus_store\n",
+    "reload(milvus_store)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
@@ -41,7 +55,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Chunking and encoding: 100%|██████████| 25041/25041 [00:24<00:00, 1003.31it/s]\n"
+      "Chunking and encoding: 100%|██████████| 25039/25039 [00:27<00:00, 926.43it/s]\n",
+      "Generating embeddings: 100%|██████████| 5131/5131 [02:31<00:00, 33.87it/s]\n"
      ]
     },
     {
@@ -54,19 +69,108 @@
       "Inserting batch of 4000 chunks into Milvus...\n",
       "Inserting batch of 4000 chunks into Milvus...\n",
       "Inserting batch of 4000 chunks into Milvus...\n",
-      "Inserting final batch of 1434 chunks into Milvus...\n",
-      "Rebuilt Milvus collection from /Users/luis/Desktop/ETH/Courses/SS25-DSL/db/granite\n"
+      "Inserting batch of 4000 chunks into Milvus...\n",
+      "Inserting batch of 4000 chunks into Milvus...\n",
+      "Inserting batch of 4000 chunks into Milvus...\n",
+      "Inserting batch of 4000 chunks into Milvus...\n",
+      "Inserting final batch of 1042 chunks into Milvus...\n",
+      "Rebuilt Milvus collection from /Users/luis/Desktop/ETH/Courses/SS25-DSL/db/main\n"
      ]
     }
    ],
    "source": [
-    "from semantic_search.store.milvus_store import MilvusDocumentStore\n",
+    "from src.semantic_search.store.milvus_store import MilvusDocumentStore\n",
     "\n",
-    "for store_name in ['mini_gte', 'MiniLM', 'specter2_base']:\n",
-    "    ds = MilvusDocumentStore()\n",
-    "    print(f'Rebuilding {store_name}')\n",
-    "    ds.rebuild_index_from_dir(db_superdir='/Users/luis/Desktop/ETH/Courses/SS25-DSL/dsl-research-assistant/db', store_name=store_name, overwrite=False)\n",
-    "    del ds"
+    "ds = MilvusDocumentStore()\n",
+    "ds.rebuild_index_from_dir(db_superdir='/Users/luis/Desktop/ETH/Courses/SS25-DSL/dsl-research-assistant/db', store_name='main', overwrite=False, allow_embedding_calc=True)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'rank': 1,\n",
+       "  'id': 'W4307076611',\n",
+       "  'score': 0.6508416694945303,\n",
+       "  'emb_score': 0.7992831468582153,\n",
+       "  'cit_score': 0.057075760039789765,\n",
+       "  'doi': '10.48550/arxiv.2210.10984',\n",
+       "  'ref_via': 'doi',\n",
+       "  'title': 'RAIS: Robust and Accurate Interactive Segmentation via Continual Learning',\n",
+       "  'text': 'Interactive image segmentation aims at segmenting a target region through a way of human-computer interaction. Recent works based on deep learning have achieved excellent performance, while most of them focus on improving the accuracy of the training set and ignore potential improvement on the test set. In the inference phase, they tend to have a good performance on similar domains to the training set, and lack adaptability to domain shift, so they require more user efforts to obtain satisfactory results. In this work, we propose RAIS, a robust and accurate architecture for interactive segmentation with continuous learning, where the model can learn from both train and test data sets. For efficient learning on the test set, we propose a novel optimization strategy to update global and local parameters with a basic segmentation module and adaptation module, respectively. Moreover, we perform extensive experiments on several benchmarks that show our method can handle data distribution shifts and achieves SOTA performance compared with recent interactive segmentation methods. Besides, our method also shows its robustness in the datasets of remote sensing and medical imaging where the data domains are completely different between training and testing.',\n",
+       "  'type': 'preprint',\n",
+       "  'topic': 'Domain Adaptation and Few-Shot Learning',\n",
+       "  'domain': 'Physical Sciences',\n",
+       "  'field': 'Computer Science',\n",
+       "  'subfield': 'Artificial Intelligence',\n",
+       "  'cited_by_count': 1,\n",
+       "  'citation_normalized_percentile': 0.60916,\n",
+       "  'is_in_top_1_percent': False,\n",
+       "  'is_in_top_10_percent': False,\n",
+       "  'authors': 'Yuying Hao, Yi Liu, Juncai Peng, et al.',\n",
+       "  'pub_date': '2022-01-01',\n",
+       "  'publisher': 'arXiv (Cornell University)',\n",
+       "  'cit_str': 'Yuying Hao, Yi Liu, Juncai Peng, et al. (2022). RAIS: Robust and Accurate Interactive Segmentation via Continual Learning',\n",
+       "  '_citation_scores': 0.057075760039789765},\n",
+       " {'rank': 2,\n",
+       "  'id': 'W3028392891',\n",
+       "  'score': 0.5264605568448447,\n",
+       "  'emb_score': 0.537901759147644,\n",
+       "  'cit_score': 0.48069574763364753,\n",
+       "  'doi': '10.48550/arxiv.2005.10821',\n",
+       "  'ref_via': 'openalex_id',\n",
+       "  'title': 'Hierarchical Multi-Scale Attention for Semantic Segmentation',\n",
+       "  'text': 'Multi-scale inference is commonly used to improve the results of semantic segmentation. Multiple images scales are passed through a network and then the results are combined with averaging or max pooling. In this work, we present an attention-based approach to combining multi-scale predictions. We show that predictions at certain scales are better at resolving particular failures modes, and that the network learns to favor those scales for such cases in order to generate better predictions. Our attention mechanism is hierarchical, which enables it to be roughly 4x more memory efficient to train than other recent approaches. In addition to enabling faster training, this allows us to train with larger crop sizes which leads to greater model accuracy. We demonstrate the result of our method on two datasets: Cityscapes and Mapillary Vistas. For Cityscapes, which has a large number of weakly labelled images, we also leverage auto-labelling to improve generalization. Using our approach we achieve a new state-of-the-art results in both Mapillary (61.1 IOU val) and Cityscapes (85.1 IOU test).',\n",
+       "  'type': 'preprint',\n",
+       "  'topic': 'Advanced Neural Network Applications',\n",
+       "  'domain': 'Physical Sciences',\n",
+       "  'field': 'Computer Science',\n",
+       "  'subfield': 'Computer Vision and Pattern Recognition',\n",
+       "  'cited_by_count': 342,\n",
+       "  'citation_normalized_percentile': 0.999857,\n",
+       "  'is_in_top_1_percent': True,\n",
+       "  'is_in_top_10_percent': True,\n",
+       "  'authors': 'Andrew Tao, Karan Sapra, Bryan Catanzaro',\n",
+       "  'pub_date': '2020-01-01',\n",
+       "  'publisher': 'arXiv (Cornell University)',\n",
+       "  'cit_str': 'Andrew Tao, Karan Sapra, Bryan Catanzaro (2020). Hierarchical Multi-Scale Attention for Semantic Segmentation',\n",
+       "  '_citation_scores': 0.48069574763364753},\n",
+       " {'rank': 3,\n",
+       "  'id': 'W3100063341',\n",
+       "  'score': 0.5066313682826518,\n",
+       "  'emb_score': 0.5347352027893066,\n",
+       "  'cit_score': 0.3942160302560324,\n",
+       "  'doi': '10.1109/lsp.2020.3007086',\n",
+       "  'ref_via': 'openalex_id',\n",
+       "  'title': 'AutoHR: A Strong End-to-End Baseline for Remote Heart Rate Measurement With Neural Searching',\n",
+       "  'text': 'Remote photoplethysmography (rPPG), which aims at measuring heart activities without any contact, has great potential in many applications (e.g., remote healthcare). Existing end-to-end rPPG and heart rate (HR) measurement methods from facial videos are vulnerable to the less-constrained scenarios (e.g., with head movement and bad illumination). In this letter, we explore the reason why existing end-to-end networks perform poorly in challenging conditions and establish a strong end-to-end baseline (AutoHR) for remote HR measurement with neural architecture search (NAS). The proposed method includes three parts: 1) a powerful searched backbone with novel Temporal Difference Convolution (TDC), intending to capture intrinsic rPPG-aware clues between frames; 2) a hybrid loss function considering constraints from both time and frequency domains; and 3) spatio-temporal data augmentation strategies for better representation learning. Comprehensive experiments are performed on three benchmark datasets to show our superior performance on both intra- and cross-dataset testing.',\n",
+       "  'type': 'article',\n",
+       "  'topic': 'Non-Invasive Vital Sign Monitoring',\n",
+       "  'domain': 'Physical Sciences',\n",
+       "  'field': 'Engineering',\n",
+       "  'subfield': 'Biomedical Engineering',\n",
+       "  'cited_by_count': 119,\n",
+       "  'citation_normalized_percentile': 0.999975,\n",
+       "  'is_in_top_1_percent': True,\n",
+       "  'is_in_top_10_percent': True,\n",
+       "  'authors': 'Zitong Yu, Xiaobai Li, Xuesong Niu, et al.',\n",
+       "  'pub_date': '2020-01-01',\n",
+       "  'publisher': 'IEEE Signal Processing Letters',\n",
+       "  'cit_str': 'Zitong Yu, Xiaobai Li, Xuesong Niu, et al. (2020). AutoHR: A Strong End-to-End Baseline for Remote Heart Rate Measurement With Neural Searching',\n",
+       "  '_citation_scores': 0.3942160302560324}]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ds.search('test', top_k=3, return_doc_metadata=True)"
    ]
   },
   {
@@ -101,7 +205,7 @@
     }
    ],
    "source": [
-    "from semantic_search.utils import load_data\n",
+    "from src.semantic_search.utils import load_data\n",
     "from importlib import reload\n",
     "\n",
     "df, ref_df = load_data(\n",
@@ -126,14 +230,14 @@
     }
    ],
    "source": [
-    "from semantic_search.store import faiss_store, models, milvus_store\n",
+    "from src.semantic_search.store import faiss_store, models, milvus_store\n",
     "from importlib import reload\n",
     "reload(models)\n",
     "reload(milvus_store)\n",
     "reload(faiss_store)\n",
-    "from semantic_search.store.models import LocalEmbeddingModel, create_embedding_model\n",
-    "from semantic_search.store.milvus_store import MilvusDocumentStore\n",
-    "from semantic_search.store.faiss_store import FAISSDocumentStore\n",
+    "from src.semantic_search.store.models import LocalEmbeddingModel, create_embedding_model\n",
+    "from src.semantic_search.store.milvus_store import MilvusDocumentStore\n",
+    "from src.semantic_search.store.faiss_store import FAISSDocumentStore\n",
     "\n",
     "# ds = FAISSDocumentStore(\n",
     "#     embedding_model=LocalEmbeddingModel(),\n",
@@ -355,10 +459,10 @@
     }
    ],
    "source": [
-    "from semantic_search.data_retrieval.utils import extract_abstract_from_md\n",
-    "from semantic_search.utils import predict_refs_from_abstract\n",
-    "from semantic_search.benchmarking.utils import calc_metric_at_topk\n",
-    "from semantic_search.utils import load_data\n",
+    "from src.semantic_search.data_retrieval.utils import extract_abstract_from_md\n",
+    "from src.semantic_search.utils import predict_refs_from_abstract\n",
+    "from src.semantic_search.benchmarking.utils import calc_metric_at_topk\n",
+    "from src.semantic_search.utils import load_data\n",
     "from tqdm import tqdm\n",
     "import pandas as pd\n",
     "\n",
