--- a/backend/src/semantic_search/dev/retrieval_dev.ipynb
+++ b/backend/src/semantic_search/dev/retrieval_dev.ipynb
@@ -28,7 +28,7 @@
     "import sys\n",
     "# sys.path.append(os.path.dirname(os.path.dirname(os.path.abspath('.'))))  # /src\n",
     "\n",
-    "from semantic_search.misc import LocalEmbeddingModel, FAISSDocumentStore"
+    "from src.semantic_search.misc import LocalEmbeddingModel, FAISSDocumentStore"
    ]
   },
   {
@@ -56,7 +56,7 @@
     "from importlib import reload\n",
     "from semantic_search import misc\n",
     "reload(misc)\n",
-    "from semantic_search.misc import LocalEmbeddingModel, FAISSDocumentStore"
+    "from src.semantic_search.misc import LocalEmbeddingModel, FAISSDocumentStore"
    ]
   },
   {
