--- a/backend/src/semantic_search/dev/benchmarking_dev.ipynb
+++ b/backend/src/semantic_search/dev/benchmarking_dev.ipynb
@@ -13,8 +13,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from semantic_search.utils import load_metadata\n",
-    "from semantic_search.data_retrieval.utils import extract_abstract_from_md\n",
+    "from src.semantic_search.utils import load_metadata\n",
+    "from src.semantic_search.data_retrieval.utils import extract_abstract_from_md\n",
     "\n",
     "df, ref_df = load_metadata(\n",
     "    '/Users/luis/Desktop/ETH/Courses/SS25-DSL/data/metadata3',\n",
@@ -652,7 +652,7 @@
     {
      "data": {
       "text/plain": [
-       "<module 'semantic_search.store.milvus_store' from '/Users/luis/Desktop/ETH/Courses/SS25-DSL/src/semantic_search/store/milvus_store.py'>"
+       "<module 'src.semantic_search.store.milvus_store' from '/Users/luis/Desktop/ETH/Courses/SS25-DSL/src/semantic_search/store/milvus_store.py'>"
       ]
      },
      "execution_count": 56,
@@ -661,7 +661,7 @@
     }
    ],
    "source": [
-    "from semantic_search.store import milvus_store\n",
+    "from src.semantic_search.store import milvus_store\n",
     "reload(milvus_store)"
    ]
   },
@@ -687,7 +687,7 @@
     "import pandas as pd\n",
     "\n",
     "\n",
-    "from semantic_search.store.milvus_store import MilvusDocumentStore\n",
+    "from src.semantic_search.store.milvus_store import MilvusDocumentStore\n",
     "\n",
     "\n",
     "ds = MilvusDocumentStore()\n",
@@ -943,7 +943,7 @@
     "from importlib import reload\n",
     "from semantic_search import utils\n",
     "reload(utils)\n",
-    "from semantic_search.utils import load_data\n",
+    "from src.semantic_search.utils import load_data\n",
     "df, ref_df = load_data(dirpath='/Users/luis/Desktop/ETH/Courses/SS25-DSL/data/metadata3', filter_good_papers=True, filter_good_references=True)"
    ]
   },
@@ -975,11 +975,11 @@
     "from tqdm import tqdm\n",
     "import pandas as pd\n",
     "\n",
-    "from semantic_search.store.milvus_store import MilvusDocumentStore\n",
-    "from semantic_search.store.faiss_store import FAISSDocumentStore\n",
-    "from semantic_search.utils import predict_refs_from_abstract, load_data\n",
-    "from semantic_search.benchmarking.utils import calc_metric_at_topk\n",
-    "from semantic_search.data_retrieval.utils import extract_abstract_from_md\n",
+    "from src.semantic_search.store.milvus_store import MilvusDocumentStore\n",
+    "from src.semantic_search.store.faiss_store import FAISSDocumentStore\n",
+    "from src.semantic_search.utils import predict_refs_from_abstract, load_data\n",
+    "from src.semantic_search.benchmarking.utils import calc_metric_at_topk\n",
+    "from src.semantic_search.data_retrieval.utils import extract_abstract_from_md\n",
     "\n",
     "\n",
     "store_dirpath = '/Users/luis/Desktop/ETH/Courses/SS25-DSL/db'\n",
@@ -1145,7 +1145,7 @@
     "\n",
     "# Calculate F1 scores for different bins and categories\n",
     "\n",
-    "from semantic_search.benchmarking.utils import score_predictions\n",
+    "from src.semantic_search.benchmarking.utils import score_predictions\n",
     "\n",
     "def calculate_binned_metrics(df, column, bins=None, labels=None, categorical=False):\n",
     "    \"\"\"\n",
